Fix view height problem on mobile

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,3 +1,8 @@
+
+:root {
+  --vh: 1vh;
+}
+
 body {
   background: rgb(79, 96, 116);
   color: white;
